--- a/StimSD/src/main/webapp/css/style.css
+++ b/StimSD/src/main/webapp/css/style.css
@@ -361,6 +361,15 @@ body a:hover{
     margin: 0 auto;
     border: 10px solid #d8d8d8;
 }
+.content2l {
+    width: 35%;
+    text-align: center;
+    background-color: rgb(255, 255, 255);
+    padding: 0 0 30px 0;
+    border-radius: 0px;
+    margin: 0 auto;
+    border: 10px solid #d8d8d8;
+}
 /*se usa para el index*/
 .content2 input[type="text"] {
     padding: 10px;
